images&audio.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
  <html>
     <head>
-        <link rel="icon" href="solo leveling/music facicon.png" type="image/png" >
+        <link rel="icon" href="images/music facicon.png" type="image/png" >
         <title>
             Cry For ME Lyrics 
         </title>
@@ -34,12 +34,12 @@
                 </em>
             </h2>
         <a href="https://youtu.be/bn8gP5N8hqM?si=nnXJteP54v9a_EEO" target="_blank" title="watch on YT">
-            <img src="audio in web/Cry for me cover.jpg" alt="Link to youtube " height="300"> 
+            <img src="images/Cry for me cover.jpg" alt="Link to youtube " height="300"> 
         </a>
         <br>
         <audio controls  > 
-            <source src="audio in web/The Weeknd - Cry For Me.mp3" type="audio/mp3">
-            <source src="audio in web/The Weeknd - Cry For Me.wav" type="audio/wav">
+            <source src="audio/The Weeknd - Cry For Me.mp3" type="audio/mp3">
+            <source src="audio/The Weeknd - Cry For Me.wav" type="audio/wav">
         </audio>
         <hr>
         <h3 class="white"> Lyrics</h3>
@@ -137,3 +137,4 @@ Girl, I'll cry for you, ooh, yeah
 
 
  </html>
+
